--- a/new/RMP-wordpress/.htaccess
+++ b/new/RMP-wordpress/.htaccess
@@ -11,3 +11,10 @@ RewriteRule . /wordpress/index.php [L]
 
 # END WordPress
 
+
+AddType video/mp4 .mp4
+AddType video/ogg .ogv
+AddType video/webm .webm
+AddType video/x-m4v .m4v
+AddType application/ogg .ogg
+
